# Product-Sales-Management-System

./: .gitignore  DOCUMENTATION.md  README.md  ai_module.py  ai_service.py  app.py  message_module.py  order_module.py  pyproject.toml  start.py  statistics_module.py
database/: sample_data.sql  schema.sql
templates/: ai_query.html  base.html  categories.html  dashboard.html  goods.html  index.html  login.html  messages.html  orders.html  prediction.html  statistics.html  users.html
