[project]
name = "product-sales-management-system"
version = "1.0.0"
description = "基于Python Flask的商品销售管理系统"
authors = [
    {name = "Product Sales Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask==2.3.3",
    "pymysql==1.1.0",
    "flask-cors==4.0.0",
    "python-dateutil>=2.8.2",
    "openpyxl>=3.1.2",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0,<7.2.0",
    "mypy>=1.0.0",
]

[project.scripts]
start = "start:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0,<7.2.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
